Remove Container (#27)
* Remove Container

* small changes

* fix

* remove file

* Make Manager static

---------

Co-authored-by: EotT123 <EotT123>